# pylbm

./: .appveyor.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.txt  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  optional-requirements.txt  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  python-package.yml  release-please.yml
conda/: environment.yml
demo/1D/: advection.py  advection_HDR.py  advection_profile.py  advection_reaction.py  burgers.py  burgers_cv.py  burgers_test.py  euler.py  heat.py  p_system.py  riemann_solvers.py  shallow_water.py  shallow_water_slow_shock.py  test_dictionnaires.py
demo/2D/: D2Q4_Lid_Driven_Cavity.py  D2Q4_Lid_Driven_Cavity_vispy.py  D2Q4_Poiseuille.py  D2Q4_Shallow_Water.py  D2Q4_Shallow_Water_vispy.py  D2Q4_Shallow_Water_vispy.py.lprof  D2Q4_Transport.py  D2Q4_advection.py  D2Q9Q4_Rayleigh-Benard_vispy.py  D2Q9_Coude.py  D2Q9_Karman.py  D2Q9_Karman_vispy.py  D2Q9_Karman_vispy_orig.py  D2Q9_Lid_Driven_Cavity.py  D2Q9_Lid_Driven_Cavity_vispy.py  D2Q9_poiseuille.py  Karman_alley.py  Karman_vortex_street.py  Kelvin_Helmoltz.py  Kelvin_Helmotz.py  Lid_Driven_Cavity_profile.py  Orszag_Tang_vortex.py  Tests.py  (+18 more)
doc/: Makefile  environment.yml  make.bat  requirements.txt
gallery/: Air_Conditioning.py  Air_Conditioning_3D.py  Heat.py  Karman_vortex_street.py  Orszag_Tang_vortex.pvsm  Orszag_Tang_vortex.py  Rayleigh-Benard.py  air_conditioning.pvsm
notebooks/: 01_first_LBM_for_transport.ipynb  02_first_LBM_for_waves.ipynb  03_heat_1D.ipynb  04_heat_2D.ipynb  05_Poiseuille.ipynb  06_Lid_driven_cavity.ipynb  07_Von_Karman_vortex_street.ipynb  08_advection_reaction.ipynb
paper/: paper.bib  paper.md
pyLBM/: __init__.py  bc_utils.pyx  boundary.py  classical_schemes.py  context.py  domain.py  elements.py  generator.py  geometry.py  hdf5.py  interface.py  logs.py  mpi_topology.py  options.py  scheme.py  simulation.py  stencil.py  storage.py  symbolic.py  test0  test1  test2  utils.py  validate_dictionary.py  viewer.py  vtk.py
pylbm/: __init__.py  boundary.py  classical_schemes.py  container.py  context.py  domain.py  equivalent_equation.py  geometry.py  hdf5.py  jinja_env.py  monitoring.py  mpi_topology.py  options.py  scheme.py  simulation.py  simulation.py~fix scheme creation in simulation  stencil.py  storage.py  symbolic.py  tmp_dir.py  utils.py  validate_dictionary.py  validator.py  vuetify.py
recipe/: meta.yaml
tests/: conftest.py  needfix_ode_solver.py  needfix_scheme.py  needfix_transport.py  pytest.ini  test.py  test_basic_geometry.py  test_demo_1d.py  test_demo_2d.py  test_demo_3d.py  test_domain.py  test_elements.py  test_generators.py  test_geometry.py  test_mpi.py  test_ode_solver.py  test_scheme.py  test_stencil.py  test_stencil_symmetry.py  test_transport.py  test_velocity.py
(+443 files in other folders)
