[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pylbm"
author = "L. Gouarin, B. Graille"
author-email = "loic.gouarin@gmail.com, benjamin.graille@math.u-psud.fr"
home-page = "https://github.com/pylbm/pylbm"
requires=[
    "numpy",
    "matplotlib",
    "sympy >=1.1.1,<1.2",
    "cython",
    "h5py",
    "mpi4py",
    "colorlog",
    "colorama",
    "cerberus",
    "jinja2",
]
requires-python="~=3.5"
description-file="README.rst"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]

[tool.flit.metadata.urls]
Documentation = "https://pylbm.readthedocs.io/en/latest/"
